MC Eternal - Version 1.1

--- a/Client/modlist.html
+++ b/Client/modlist.html
@@ -5,6 +5,7 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/263624">Moar Tinkers (by AshuraNoYami)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/245755">Waystones (by BlayTheNinth)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/224535">IvToolkit (by Ivorforce)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/282623">Tweakers Construct (by RCXcrafter)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/226780">ShadowMC (by ShadowfactsDev)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/277047">InstantUnify (by KidsDontPlay)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/284876">DimensionalDoors (by DimensionalDevelopment)</a></li>
@@ -15,19 +16,18 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/260327">PlusTiC (by landmaster_phuong0429)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/251396">InfinityLib (by InfinityRaider)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/229060">iChunUtil (by ohaiiChun)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/224599">Mystcraft (by XCompWiz)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/74924">Mantle (by mDiyo)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/229073">Hats (by ohaiiChun)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/229084">Portal Gun (by ohaiiChun)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/289412">FTB Quests (by LatvianModder)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/255902">Wither Skeleton Tweaks (by Shadows_of_Fire)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/242500">Dungeon Tactics (by PegBeard)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/289412">FTB Quests (by LatvianModder)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/233564">Tech Reborn (by modmuss50)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/272671">Tinkers' Complement (by KnightMiner)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/242500">Dungeon Tactics (by PegBeard)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/224641">RFTools (by McJty)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/314002">Overloaded Armor Bar (by tfarecnim)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/70496">BdLib (by bdew)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/314002">Overloaded Armor Bar (by tfarecnim)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/331876">Loot Games (by Time_Conqueror)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/292785">VanillaFix (by Runemoro)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/254818">Energy Converters (by xalcon)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/270457">Improved Backpacks (by DreenDexTwitch)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/224663">Open Modular Turrets (by Keridos)</a></li>
@@ -36,13 +36,14 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/239197">CraftTweaker (by Jaredlll08)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/228027">BiblioCraft (by Nuchaz)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/228029">Davincis Vessels (by darkevilmac)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/333029">TekTopia (by TangoTek)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/268250">Immersive Petroleum (by Flaxbeard)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/250398">Controlling (by Jaredlll08)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/245933">MenuMobs (by Superbas11)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/316304">Loot Capacitor Tooltips (by tfarecnim)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/224712">Wawla - What Are We Looking At (by DarkhaxDev)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/291737">Thermal Innovation (by TeamCoFH)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/243707">Corail Tombstone (by Corail_31)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/238123">stimmedcow : NoMoreRecipeConflict (by GotoLink)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/250419">Enchantment Descriptions (by DarkhaxDev)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/244844">ForgeEndertech (by EnderLanky)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/306283">FTB Money (by LatvianModder)</a></li>
@@ -66,16 +67,17 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/282940">Mystical World (by EpicSquid319)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/309756">Gas Conduits (by pupnewfster)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/74072">Tinkers Construct (by mDiyo)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/278494">FoamFix for Minecraft (by asiekierka)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/278494">FoamFix​ (by asiekierka)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/237167">FTB Library (by LatvianModder)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/250577">Akashic Tome (by Vazkii)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/275153">WrapUp (by TheLMiffy1111)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/61811">Buildcraft (by Covert_Jaguar)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/239418">Sonar Core (by sonar_sonic)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/239431">MCMultiPart (by amadornes)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/230495">MovingWorld (by darkevilmac)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/223794">Applied Energistics 2 (by AlgorithmX2)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/230497">Chameleon (by Texelsaur)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/229380">Inventory Pets (by Purplicious_Cow_)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/230497">Chameleon (by Texelsaur)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/258426">Forge MultiPart CBE (by covers1624)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/271835">Thermal Cultivation (by TeamCoFH)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/252848">Nature's Compass (by Chaosyr)</a></li>
@@ -90,8 +92,8 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/232791">It's the little things (by Zlepper)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/289760">Treasure2! (by gottsch)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/251792">Simply Jetpacks 2 (by Tomson124)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/270789">Redstone Flux (by TeamCoFH)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/240630">Just Enough Resources (JER) (by way2muchnoise)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/270789">Redstone Flux (by TeamCoFH)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/248453">Shadowfacts' Forgelin (by ShadowfactsDev)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/268560">Mekanism (by bradyaidanc)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/238403">Better Builder's Wands (by Portablejim)</a></li>
@@ -104,13 +106,16 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/237307">Cosmetic Armor Reworked (by LainMI)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/318857">HunterIllager (by bagu_chan)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/74246">Doomlike Dungeons (by JaredBGreat)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/318872">Charm (by svenhjol)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/228404">Actually Additions (by Ellpeck)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/235107">NotEnoughIDs (by fewizz_)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/261924">Farming for Blockheads (by BlayTheNinth)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/245174">Ender Storage 1.8.+ (by covers1624)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/263048">Practical Logistics 2 (by sonar_sonic)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/255232">p455w0rd's Library (by TheRealp455w0rd)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/321139">Fish's Undead Rising (by fish0016054)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/260824">Wireless Redstone CBE (by covers1624)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/235133">Grue (by Shinoow)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/260824">Wireless Redstone CBE (by covers1624)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/222880">Thermal Foundation (by TeamCoFH)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/277616">Spice of Life: Carrot Edition (by lordcazsius)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/253043">WanionLib (by WanionCane)</a></li>
@@ -120,8 +125,8 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/277631">ArchitectureCraft - TridentMC Version (by darkevilmac)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/59816">Random Things (by Lumien231)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/264231">Ice and Fire:  Dragons in a whole new light! (by alex1the1666)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/236307">Integrated Dynamics (by kroeser)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/226254">NuclearCraft (by tomdodd4598)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/236307">Integrated Dynamics (by kroeser)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/307806">OreLib (by OreCruncher)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/267602">ConnectedTexturesMod (by tterrag1098)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/231868">EnderCore (by tterrag1098)</a></li>
@@ -145,8 +150,8 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/252042">Paintings ++ (by AbsolemJackdaw)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/229708">Farseek (by delvr)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/254284">AmbientSounds 3 (by CreativeMD)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/243121">Quark (by Vazkii)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/231951">Immersive Engineering (by BluSunrize)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/243121">Quark (by Vazkii)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/233071">Crafting Tweaks (by BlayTheNinth)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/237541">Totemic (by ljfa2)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/244258">UniDict (by WanionCane)</a></li>
@@ -160,21 +165,21 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/302381">Ghost's Explosives (by ghostgamingpe)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/247661">TAIGA (Tinkers alloying addon) (by zkafaceTV)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/223094">Inventory Tweaks (by Kobata)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/248787">AppleSkin (by squeek502)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/226447">Resource Loader (by Lumien231)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/248787">AppleSkin (by squeek502)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/273362">Dungeons2 (by gottsch)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/293496">OldJavaWarning (by DarkhaxDev)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/309136">Multi Mob Library (by Daveyx0)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/223150">Recurrent Complex (by Ivorforce)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/235440">Numina (by machinemuse)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/235442">Modular Powersuits (by machinemuse)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/230976">Fast Leaf Decay (by olafskiii)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/310287">The Summoner (by Daveyx0)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/245506">Minecolonies (by H3lay)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/60089">Mouse Tweaks (by YaLTeR)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/228756">Iron Chests (by ProgWML6)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/227639">The Twilight Forest (by Benimatic)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/60089">Mouse Tweaks (by YaLTeR)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/229876">BetterFps (by Guichaguri)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/237701">ReAuth (by TechnicianLP)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/246640">Mystical Agriculture (by BlakeBr0)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/272335">Cucumber Library (by BlakeBr0)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/64578">Ender IO (by CrazyPants_MC)</a></li>
@@ -183,11 +188,12 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/258944">Customized Dungeon Loot (by XxRexRaptorxX)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/233255">Login Shield (by Glasspelican)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/277938">Integration Foregoing (by Jackyy)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/256717">Clumps (by Jaredlll08)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/283525">LagGoggles (by Terminator_NL)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/251136">Level Up! Reloaded (by BeetoGuy)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/282415">Primitive Mobs (by Daveyx0)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/267901">Stupid Things (by Furgle)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/266784">Scannable (by Sangar_)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/267901">Stupid Things (by Furgle)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/244451">ICBM - Classic (by DarkGuardsman)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/228815">OpenModsLib (by OpenMods)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/228816">OpenBlocks (by OpenMods)</a></li>
@@ -206,8 +212,10 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/233342">Fairy Lights (by pau101)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/253449">Hwyla (by TehNut)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/272450">GottschCore (by gottsch)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/253462">Steve's Carts Reborn (by modmuss50)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/69162">CoFH Core (by TeamCoFH)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/69163">Thermal Expansion (by TeamCoFH)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/318255">Phosphor (by jellysquid_)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/314904">FTB Backups (by LatvianModder)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/254602">Tesla Core Lib (by face_of_cat)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/283644">Placebo (by Shadows_of_Fire)</a></li>
@@ -217,8 +225,8 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/304881">The Midnight (by cipher_zero_x)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/247921">ZeroCore (by ZeroNoRyouki)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/298187">Building Gadgets (by Direwolf20)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/254629">The Beneath (by Shinoow)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/271384">CoFH World (by TeamCoFH)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/254629">The Beneath (by Shinoow)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/224472">AppleCore (by squeek502)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/272514">/dank/null (by TheRealp455w0rd)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/225605">LunatriusCore (by Lunatrius)</a></li>
