MC Eternal - Version Beta 1.4.1

--- a/Client/modlist.html
+++ b/Client/modlist.html
@@ -17,6 +17,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mysticallib">MysticalLib (by EpicSquid315)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ding">Ding (by ohaiiChun)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/integrated-tunnels">Integrated Tunnels (by kroeser)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/no-recipe-book">No Recipe Book (by Seneschal_Luwin)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/infinitylib">InfinityLib (by InfinityRaider)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ichunutil">iChunUtil (by ohaiiChun)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fnars-roguelike-dungeons">Roguelike Dungeons -- Fnar's Edition (by FnarDotTv)</a></li>
@@ -146,7 +147,6 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fossils">Fossils and Archeology Revival (by _ForgeUser18449974)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/hunterillager">Hunter illager (by catscrafters)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/crimson-warfare">Crimson Warfare (by Ta6e)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/charm">Charm (by svenhjol)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/actually-additions">Actually Additions (by Ellpeck)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/notenoughids">NotEnoughIDs (by fewizz_)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/hammer-lib">Hammer (Lib) Core (by Zeitheron)</a></li>
@@ -214,7 +214,6 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mtlib">MTLib (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mcjtylib">McJtyLib (by McJty)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/custom-main-menu">Custom Main Menu (by Lumien231)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/tickcentral">TickCentral (by Terminator_NL)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/omlib">OMLib (by Keridos)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/randompatches-forge">RandomPatches (Forge) (by TheRandomLabs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/chance-cubes">Chance Cubes (by TurkeyDev)</a></li>
@@ -262,8 +261,8 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/customized-dungeon-loot">Customized Dungeon Loot (by XxRexRaptorxX)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/login-shield">Login Shield (by Glasspelican)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/integration-foregoing">Integration Foregoing (by Jackyy)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/laggoggles">LagGoggles (by Terminator_NL)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/clumps">Clumps (by Jaredlll08)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/laggoggles">LagGoggles (by Terminator_NL)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/level-up">Level Up! Reloaded (by BeetoGuy)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/primitive-mobs">Primitive Mobs (by Daveyx0)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/scannable">Scannable (by Sangar_)</a></li>
@@ -273,7 +272,6 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/armory-expansion">Armory Expansion (by AshuraNoYami)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/openblocks">OpenBlocks (by OpenMods)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/vampirism-integrations">Vampirism Integrations (by maxanier)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/yungs-better-mineshafts-forge">YUNG's Better Mineshafts (Forge) (by YUNGNICKYOUNG)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-calculation">Just Enough Calculation (by towdium)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/pams-cookables">Pam's Cookables - Pam's Harvestcraft Addon (by BloodWorkXGaming)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/time-core">Time Core (by Time_Conqueror)</a></li>
