--- a/Client/modlist.html
+++ b/Client/modlist.html
@@ -324,4 +324,5 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/reborncore">Reborn Core (by modmuss50)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/frozen-fiend">Frozen Fiend (by UnOriginal_1)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/vampires-need-umbrellas">Vampires Need Umbrellas (by Focamacho)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/erebusfix">ErebusFix (by Noobanidus)</a></li>
 </ul>
