--- a/Client/modlist.html
+++ b/Client/modlist.html
@@ -321,7 +321,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/champions">Champions (by TheIllusiveC4)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thaumic-augmentation">Thaumic Augmentation (by TheCodex6824)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/waila-harvestability">Waila Harvestability (by squeek502)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/reborncore">Reborn Core (by modmuss50)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/reborn-core-fork-nbt-fix">Reborn Core (Fork NBT fix) (by crisCKY)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/frozen-fiend">Frozen Fiend (by UnOriginal_1)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/vampires-need-umbrellas">Vampires Need Umbrellas (by Focamacho)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/erebusfix">ErebusFix (by Noobanidus)</a></li>
