add ifpatcher to modlist html

--- a/Client/modlist.html
+++ b/Client/modlist.html
@@ -319,3 +319,4 @@ iChunUtil (by ohaiiChun)
 p455w0rd's Library (by TheRealp455w0rd)
 stimmedcow : NoMoreRecipeConflict (by Forge_User_08823382)
 xXx_MoreToolMats_xXx (a PlusTiC fork without the evil, and apparently some new bugs idk) (by TeamDman)
+IFPatcher (by eve0415)
